force-app/main/default/objects/OCX_Published_Content__c/OCX_Published_Content__c.object-meta.xml
<CustomObject>
    <description>A Customer AI resource published into Salesforce (Markdown, Interactive HTML viewer, or PDF).</description>
    <label>Published Content</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Published Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>