force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Account__c.field-meta.xml
<CustomField>
    <fullName>OCX_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Published Content</relationshipLabel>
    <relationshipName>OCX_Published_Content</relationshipName>
    <type>Lookup</type>
</CustomField>