force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Account_External_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Account_External_ID__c</fullName>
    <description>Account.OCX_Account_ID__c of the publication target.</description>
    <label>OCX Account External ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>