force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Aspect_Ratio__c.field-meta.xml
<CustomField>
    <fullName>OCX_Aspect_Ratio__c</fullName>
    <description>Iframe aspect ratio hint, e.g. 16/9.</description>
    <label>Aspect Ratio</label>
    <length>20</length>
    <type>Text</type>
</CustomField>