force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Checksum__c.field-meta.xml
<CustomField>
    <fullName>OCX_Checksum__c</fullName>
    <description>sha256 of the published bytes.</description>
    <label>Checksum</label>
    <length>64</length>
    <type>Text</type>
</CustomField>