force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Content_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Content_Document_ID__c</fullName>
    <description>ContentDocument Id of the attached PDF, when Content Format = PDF.</description>
    <label>Content Document ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>