force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Content_Format__c.field-meta.xml
<CustomField>
    <fullName>OCX_Content_Format__c</fullName>
    <description>MARKDOWN, INTERACTIVE_HTML, or PDF.</description>
    <label>Content Format</label>
    <length>40</length>
    <type>Text</type>
</CustomField>