force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Markdown__c.field-meta.xml
<CustomField>
    <fullName>OCX_Markdown__c</fullName>
    <description>Populated only when Content Format = MARKDOWN.</description>
    <label>Markdown</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>