force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>OCX_Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>OCX_Portfolio__c</referenceTo>
    <relationshipName>OCX_Published_Content</relationshipName>
    <type>Lookup</type>
</CustomField>