force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Portfolio_External_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Portfolio_External_ID__c</fullName>
    <description>Stable external identifier of the OCX Portfolio targeted by this publication.</description>
    <label>OCX Portfolio External ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>