force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Publication_Key__c.field-meta.xml
<CustomField>
    <fullName>OCX_Publication_Key__c</fullName>
    <description>Deterministic publication key: tenant | resource id | format. Upsert key used by Customer AI.</description>
    <externalId>true</externalId>
    <label>OCX Publication Key</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>