force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Published_At__c.field-meta.xml
<CustomField>
    <fullName>OCX_Published_At__c</fullName>
    <label>Published At</label>
    <type>DateTime</type>
</CustomField>