force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Published_By_Name__c.field-meta.xml
<CustomField>
    <fullName>OCX_Published_By_Name__c</fullName>
    <label>Published By Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>