force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Published_By_User_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Published_By_User_ID__c</fullName>
    <label>Published By User ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>