force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Rendered_HTML__c.field-meta.xml
<CustomField>
    <fullName>OCX_Rendered_HTML__c</fullName>
    <description>Reserved. Interactive HTML is served from the hosted viewer, not stored here.</description>
    <label>Rendered HTML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>