force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Source_Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Source_Resource_ID__c</fullName>
    <label>Source Resource ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>