force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Source_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>OCX_Source_Resource_Type__c</fullName>
    <label>Source Resource Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>