force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Source_URL__c.field-meta.xml
<CustomField>
    <fullName>OCX_Source_URL__c</fullName>
    <label>Source URL</label>
    <type>Url</type>
</CustomField>