force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Source_Version__c.field-meta.xml
<CustomField>
    <fullName>OCX_Source_Version__c</fullName>
    <label>Source Version</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>