force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Status__c.field-meta.xml
<CustomField>
    <fullName>OCX_Status__c</fullName>
    <description>PUBLISHED when the last publish succeeded.</description>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>