force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Summary__c.field-meta.xml
<CustomField>
    <fullName>OCX_Summary__c</fullName>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>