force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Tenant_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Tenant_ID__c</fullName>
    <label>Customer AI Tenant ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>