force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Title__c.field-meta.xml
<CustomField>
    <fullName>OCX_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>