force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Viewer_Layout__c.field-meta.xml
<CustomField>
    <fullName>OCX_Viewer_Layout__c</fullName>
    <description>responsive or fixed.</description>
    <label>Viewer Layout</label>
    <length>40</length>
    <type>Text</type>
</CustomField>