force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Viewer_Ref__c.field-meta.xml
<CustomField>
    <fullName>OCX_Viewer_Ref__c</fullName>
    <description>Opaque viewer token.</description>
    <label>Viewer Ref</label>
    <length>128</length>
    <type>Text</type>
</CustomField>