force-app/main/default/objects/OCX_Published_Content__c/fields/OCX_Viewer_URL__c.field-meta.xml
<CustomField>
    <fullName>OCX_Viewer_URL__c</fullName>
    <description>Hosted Customer AI viewer URL. Render in an iframe when Content Format = INTERACTIVE_HTML.</description>
    <label>Viewer URL</label>
    <type>Url</type>
</CustomField>